# dakopi

./: .env.example  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  GEMINI.md  README.md  auth.md  gemini-conversation-1767655226921.json  railway.toml
.github/workflows/: deploy-rust-local.yml
Bruno/Dakopi/: Health.bru  bruno.json  collection.bru
Bruno/Dakopi/Admin/: Add Policy.bru  Clean casbin.bru  Delete Policy.bru  List Policies.bru
Bruno/Dakopi/Articles/: Create Article.bru  Delete Article.bru  Get Article.bru  List Articles.bru  Update Article.bru
Bruno/Dakopi/Auth/: Forgot Password.bru  ForgotPassword.bru  Login.bru  Logout.bru  Profile.bru  Refresh Token.bru  Register.bru  Reset Password.bru  ResetLimit.bru  ResetPassword.bru  Roles.bru  Verify Email.bru  VerifyEmail.bru
Bruno/Dakopi/ImageKit/: Get Auth Token.bru  Upload File.bru
Bruno/Dakopi/Media/: Check NSFW.bru  Delete Media.bru  List Media.bru  Upload Media.bru
Bruno/Dakopi/S3/: Get Presigned URL.bru  Upload File.bru
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260104_000002_create_roles_and_casbin.rs  m20260105_000003_create_auth_tables.rs  m20260106_000004_add_backup_codes.rs  m20260111_000005_create_article_media_tables.rs  m20260112_000006_standardize_pk_structure.rs  m20260113_000007_refactor_article_tags.rs  main.rs
src/: config.rs  main.rs
src/auth/: mod.rs  rbac_model.conf
src/entities/: article.rs  article_tag.rs  audit_log.rs  email_verification_token.rs  media.rs  mod.rs  oauth_account.rs  password_reset_token.rs  role.rs  session.rs  tag.rs  token_blacklist.rs  user.rs  user_role.rs
src/handlers/: admin_handler.rs  article_handler.rs  auth_handler.rs  imagekit_handler.rs  media_handler.rs  mod.rs  s3_handler.rs
src/middleware/: auth_middleware.rs  jwt_middleware.rs  mod.rs  rate_limiter.rs
src/models/: admin_model.rs  article_model.rs  auth_model.rs  imagekit_model.rs  media_model.rs  mod.rs  s3_model.rs
src/repositories/: mod.rs  oauth_repository.rs  user_repository.rs
src/routes/: admin_route.rs  article_route.rs  auth_route.rs  imagekit_route.rs  media_route.rs  mod.rs  s3_route.rs
src/seeders/: casbin_seeder.rs  mod.rs  role_seeder.rs  tag_seeder.rs  user_seeder.rs
src/services/: article_service.rs  audit_service.rs  auth_service.rs  email_service.rs  imagekit_service.rs  media_service.rs  mod.rs  oauth_service.rs  redis_service.rs  s3_service.rs
src/utils/: api_response.rs  auth_middleware.rs  jwt_utils.rs  mod.rs  nsfw_utils.rs  validated_wrapper.rs  validator_utils.rs
tests/: api_test.js  debug_jimp.js  package.json  run_tests.js
tests/flows/: admin.js  articles.js  auth.js  tags.js
tests/utils/: client.js  logger.js
(+14 files in other folders)
