[package]
name = "dakopi"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration"]

[dependencies]
# Web Server
axum = { version = "0.8.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database & ORM
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

# Security & Auth
casbin = { version = "2.0", default-features = false, features = ["runtime-tokio", "incremental"] }
sea-orm-adapter = { version = "0.4.0", features = ["runtime-tokio-rustls", "postgres"] }
argon2 = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v7", "serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
email_address = "0.2"
oauth2 = "4"
totp-rs = "5"
qrcode = "0.14"

# HTTP
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp"] }

[profile.dev]
debug = 0
strip = true
incremental = false
split-debuginfo = "off"
