[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls", # Wajib diaktifkan (hapus tanda #)
  "sqlx-postgres",        # Wajib diaktifkan untuk Postgres
  "sqlx-mysql",           # Tambahkan biar fleksibel
  "sqlx-sqlite",          # Tambahkan biar fleksibel
]